Bugfix: fix z-index setting where masthead hides WP admin bar dropdown

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,7 +4,7 @@ Theme URI: 		https://ufl.edu/
 Author: 		UFL 
 Author URI: 	https://ufl.edu/
 Template:     	ufl-main-uni
-Version:      	1.1.2
+Version:      	1.2.0
 License URI: 	https://ufl.edu
 Text Domain: 	ufl_stamatschild
 */
@@ -59,7 +59,7 @@ Text Domain: 	ufl_stamatschild
 }
 .header, 
 .section-navigation .section-navigation-inner {
-	z-index: 999999;
+	z-index: 99998;
 }
 
 /* footer */
